--- a/scss/style.scss
+++ b/scss/style.scss
@@ -467,7 +467,7 @@ p{
 	.person-img {
 		height:150px;
 		width:150px;
-		background:url(../img/candidate.png);
+		background:url(../img/candidate.jpg);
 		border-radius:50%;
 		background-repeat:no-repeat;
 		background-size:cover;
