--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,7 @@
 @charset "UTF-8"; 
 /*------------------------------------------------------------------
 [Master Stylesheet]
-Project:	Eric
+Project:	Brian Tran
 ++++ Imports ++++
 ++++ Reset ++++
 ++++ Main ++++
