--- a/scss/style.scss
+++ b/scss/style.scss
@@ -430,7 +430,7 @@ p{
 
 /********Body Sec CSS********/
 .fixed-bg {
-	background: rgba(0, 0, 0, 0) url("../img/mainbg.jpg") no-repeat;
+	background: rgba(0, 0, 0, 0) url("../img/mainbg.webp") no-repeat;
 	animation: 60s ease 0s normal none infinite back_ken;
 	-webkit-animation: 60s ease 0s normal none infinite back_ken;
 	image-rendering: optimizeQuality;
