--- a/css/style.css
+++ b/css/style.css
@@ -340,7 +340,7 @@ p {
     transform: scale(1); } }
 /********Body Sec CSS********/
 .fixed-bg {
-  background: transparent url("../img/mainbg.jpg") no-repeat;
+  background: transparent url("../img/mainbg.webp") no-repeat;
   animation: 60s ease 0s normal none infinite back_ken;
   -webkit-animation: 60s ease 0s normal none infinite back_ken;
   image-rendering: optimizeQuality;
