--- a/css/style.css
+++ b/css/style.css
@@ -236,14 +236,73 @@ p {
   overflow: hidden;
   float: none;
   clear: both; }
-
-.preloader-it {
+/* Preloading CSS */
+.preloading {
+    overflow: hidden;
+}
+.preload-container {
+    width: 100%;
+    height: 100%;
+    background: #303133;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    z-index: 99999999999;
+    display: block;
+    padding-right: 17px;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+.preload-icon {
+    font-size: 66px;
+    color: #fff;
+    margin-top: 20%;
+}
+@-webkit-keyframes {
+  from {
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes rotating {
+  from {
+    -ms-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  to {
+    -ms-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+.rotating {
+  -webkit-animation: rotating 1.5s linear infinite;
+  -moz-animation: rotating 1.5s linear infinite;
+  -ms-animation: rotating 1.5s linear infinite;
+  -o-animation: rotating 1.5s linear infinite;
+  animation: rotating 1.5s linear infinite;
+}
+/* Preloading End */
+/*.preloader-it {
   background: #303133 no-repeat;
   position: fixed;
   z-index: 110;
   height: 100%;
   width: 100%;
-  overflow: hidden !important; }
+  overflow: hidden !important; }*/
 
 /* Effect 1: YouTube loading */
 .la-anim-1 {
