--- a/css/style.css
+++ b/css/style.css
@@ -396,7 +396,7 @@ p {
   -webkit-backface-visibility: hidden; }
 
 .fixed-bg-overlay {
-  background: rgba(255, 255, 255, 0.25);
+  background: rgba(255, 255, 255, 0.85);
   height: 100%;
   width: 100%;
   z-index: -1;
@@ -582,7 +582,7 @@ nav.navbar.navbar-default.vertical-nav {
       font-weight: 500;
       left: 90px;
       line-height: 1;
-      color: #ffffff;
+      color: #303133;
       position: absolute;
       opacity: 0;
       text-transform: uppercase;
@@ -601,7 +601,7 @@ nav.navbar.navbar-default.vertical-nav {
         background: none;
         border: none; }
       nav.navbar.navbar-default.vertical-nav li a:before {
-        background-color: #ffffff;
+        background-color: #303133;
         border-radius: 50%;
         height: 50px;
         top: -21px !important;
@@ -619,8 +619,8 @@ nav.navbar.navbar-default.vertical-nav {
         right: 0;
         left: 0; }
       nav.navbar.navbar-default.vertical-nav li a:after {
-        background: #ffffff none repeat scroll 0 0;
-        border: 3px solid #ffffff;
+        background: #303133 none repeat scroll 0 0;
+        border: 3px solid #303133;
         border-radius: 50%;
         height: 0;
         -moz-transition: all 0.1s ease-out 0s;
@@ -647,11 +647,11 @@ nav.navbar.navbar-default.vertical-nav {
     nav.navbar.navbar-default.vertical-nav li.active span {
       left: 50px;
       opacity: 1;
-      color: #ffffff; }
+      color: #303133; }
     nav.navbar.navbar-default.vertical-nav li:hover span {
       left: 50px;
       opacity: 1;
-      color: #ffffff; }
+      color: #303133; }
 
 .vertical-nav-wrap.vertical-nav-animation nav.navbar.navbar-default.vertical-nav {
   opacity: 1;
