--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,7 +25,7 @@ Project:	Brian Tran
 /** Imports **/
 /****************************/
 @import "animate.css";	
-@import "font-awesome.min.css";	
+@import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css";	
 @import "pe-icon-7-stroke.css";	
 @import "et-line-font.css";	
 @import "bootstrap.min.css";	
