pe-icon-7-stroke CDN

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,7 +26,7 @@ Project:	Brian Tran
 /****************************/
 @import "animate.css";	
 @import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css";	
-@import "pe-icon-7-stroke.css";	
+@import "https://cdn.jsdelivr.net/npm/pixeden-stroke-7-icon@1.2.3/pe-icon-7-stroke/dist/pe-icon-7-stroke.min.css";	
 @import "et-line-font.css";	
 @import "bootstrap.min.css";	
 @import "owl.carousel.css";	
