--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ Project:	Brian Tran
 /****************************/
 @import url(animate.css);
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css);
-@import url(pe-icon-7-stroke.css);
+@import url(https://cdn.jsdelivr.net/npm/pixeden-stroke-7-icon@1.2.3/pe-icon-7-stroke/dist/pe-icon-7-stroke.min.css);
 @import url(et-line-font.css);
 @import url(bootstrap.min.css);
 @import url(owl.carousel.css);
