--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ Project:	Brian Tran
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css);
 @import url(https://cdn.jsdelivr.net/npm/pixeden-stroke-7-icon@1.2.3/pe-icon-7-stroke/dist/pe-icon-7-stroke.min.css);
 @import url(et-line-font.css);
-@import url(bootstrap.min.css);
+@import url(https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css);
 @import url(owl.carousel.css);
 @import url(owl.theme.default.min.css);
 @import url(inputtext.css);
