--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,7 +34,7 @@ Project:	Brian Tran
 @import "inputtext.css";	
 @import "filter.css";	
 @import "default-skin/default-skin.css";	
-@import "lightgallery.css";
+@import "https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.2.18/css/lightgallery.css";
 
 $primery_font_color:#fff;
 $secondery_color:#303133;
