--- a/css/style.css
+++ b/css/style.css
@@ -59,12 +59,12 @@ body {
 /* Mozilla based browsers */
 ::-moz-selection {
   background: rgba(206, 174, 145, 0.58);
-  color: #303133; }
+  color: #141414; }
 
 /* Works in Safari */
 ::selection {
   background: rgba(206, 174, 145, 0.58);
-  color: #303133; }
+  color: #141414; }
 
 a:hover, a:active {
   outline: 0; }
@@ -77,15 +77,15 @@ ul {
   list-style: none; }
 
 a {
-  color: #303133;
+  color: #141414;
   text-decoration: none; }
 
 a:hover {
-  color: #303133;
+  color: #141414;
   text-decoration: none; }
 
 a:focus {
-  color: #303133;
+  color: #141414;
   text-decoration: none;
   outline: none; }
 
@@ -243,7 +243,7 @@ p {
 .preload-container {
     width: 100%;
     height: 100%;
-    background: #303133;
+    background: #141414;
     position: fixed;
     top: 0;
     bottom: 0;
@@ -275,7 +275,7 @@ p {
 
 /* Preloading End */
 /*.preloader-it {
-  background: #303133 no-repeat;
+  background: #141414 no-repeat;
   position: fixed;
   z-index: 110;
   height: 100%;
@@ -290,7 +290,7 @@ p {
   z-index: -1;
   width: 100%;
   height: 5px;
-  background: #303133;
+  background: #141414;
   -webkit-transform: translate3d(-100%, 0, 0);
   transform: translate3d(-100%, 0, 0);
   pointer-events: none; }
@@ -301,7 +301,7 @@ p {
   right: 0;
   width: 100px;
   height: 100%;
-  background: #303133;
+  background: #141414;
   content: '';
   opacity: 0;
   -webkit-transition: opacity 0.2s, box-shadow 2s 4s;
@@ -396,7 +396,7 @@ p {
   -webkit-backface-visibility: hidden; }
 
 .fixed-bg-overlay {
-  background: rgba(255, 255, 255, 0.25);
+  background: rgba(255, 255, 255, 0);
   height: 100%;
   width: 100%;
   z-index: -1;
@@ -411,7 +411,7 @@ p {
 
 /********About Sec CSS********/
 .content-block {
-  background: #303133;
+  background: #141414;
   border-top-left-radius: 10px;
   -moz-transition: all 0.9s cubic-bezier(0.19, 1, 0.22, 1) 0s;
   -o-transition: all 0.9s cubic-bezier(0.19, 1, 0.22, 1) 0s;
@@ -446,7 +446,7 @@ p {
   position: relative;
   text-transform: uppercase;
   height: 37px;
-  background: #303133;
+  background: #141414;
   outline: none;
   border: none;
   border-radius: 2px;
@@ -458,7 +458,7 @@ p {
   .btn .btn-label {
     padding: 4px 0; }
   .btn:hover, .btn:focus, .btn:active {
-    background: #303133 !important;
+    background: #141414 !important;
     outline: none !important;
     border: none !important;
     color: #fff !important; }
@@ -488,7 +488,7 @@ p {
   font-weight: 700;
   letter-spacing: 0.5px;
   display: block;
-  color: #303133;
+  color: #fff;
   padding-top: 7px; }
 
 header {
@@ -498,21 +498,10 @@ header {
   width: 100%;
   z-index: 1;
   height: 70px;
-  -moz-transform: translateY(-70px) translateZ(0);
-  -o-transform: translateY(-70px) translateZ(0);
-  -ms-transform: translateY(-70px) translateZ(0);
-  -webkit-transform: translateY(-70px) translateZ(0);
-  transform: translateY(-70px) translateZ(0);
   -moz-transition: transform 0.6s ease 0s;
   -o-transition: transform 0.6s ease 0s;
   -webkit-transition: transform 0.6s ease 0s;
   transition: transform 0.6s ease 0s; }
-  header.header-animation {
-    -moz-transform: translateY(0) translateZ(0);
-    -o-transform: translateY(0) translateZ(0);
-    -ms-transform: translateY(0) translateZ(0);
-    -webkit-transform: translateY(0) translateZ(0);
-    transform: translateY(0) translateZ(0); }
   header .header-wrap {
     padding-top: 16px; }
     header .header-wrap .pe-7s-download {
@@ -535,13 +524,15 @@ header {
     -o-transition: margin 0.6s ease 0s, transform 0.6s ease 0s;
     -webkit-transition: margin 0.6s ease 0s, transform 0.6s ease 0s;
     transition: margin 0.6s ease 0s, transform 0.6s ease 0s; }
+    header.fixed .name span {
+      color: #141414; }
     header.fixed .btn {
       color: #fff;
-      background: #303133; }
+      background: #141414; }
       header.fixed .btn .mask {
         background: #c8a482; }
       header.fixed .btn:hover, header.fixed .btn:focus, header.fixed .btn:active {
-        background: #303133 !important;
+        background: #141414 !important;
         outline: none !important;
         border: none !important;
         color: #fff !important; }
@@ -725,7 +716,7 @@ a.goto-social, a.goto-social:hover {
       height: 15px;
       position: absolute;
       right: 0px;
-      background: #303133;
+      background: #141414;
       top: -6px;
       width: 15px; }
   .skills-wrap .progress-cat {
@@ -991,7 +982,7 @@ a.goto-social, a.goto-social:hover {
   height: 80px; }
 .contact-wrap .btn {
   background: #fff;
-  color: #303133; }
+  color: #141414; }
   .contact-wrap .btn:hover, .contact-wrap .btn:focus, .contact-wrap .btn:active {
     background: #fff !important;
     color: #fff !important; }
@@ -1204,7 +1195,7 @@ footer .goto-top {
     display: none; }
   nav.navbar.navbar-default li a span {
     display: block;
-    color: #303133;
+    color: #141414;
     font-size: 11px;
     font-weight: 500;
     letter-spacing: 1.5px;
@@ -1272,17 +1263,17 @@ footer .goto-top {
       padding-right: 0; }
       header .header-wrap .btn {
         padding: 7px 8px;
-        background: #303133 !important; }
+        background: #141414 !important; }
         header .header-wrap .btn .btn-label {
           padding-bottom: 0;
           padding-top: 0; }
         header .header-wrap .btn:hover, header .header-wrap .btn:focus, header .header-wrap .btn:active {
-          background: #303133 !important;
+          background: #141414 !important;
           outline: none !important;
           border: none !important;
           color: #fff !important; }
         header .header-wrap .btn:hover .pe-7s-download, header .header-wrap .btn:hover .pe-7s-menu {
-          color: #303133 !important; }
+          color: #141414 !important; }
       header .header-wrap b {
         display: none; }
       header .header-wrap .pe-7s-download {
@@ -1295,7 +1286,7 @@ footer .goto-top {
       header .btn .mask {
         background: #c8a482; }
       header .btn:hover {
-        color: #303133;
+        color: #141414;
         background: #fff; }
 
   .content-block {
@@ -1331,9 +1322,9 @@ footer .goto-top {
     color: #fff !important; }
 
   .contact-wrap .btn {
-    color: #303133; }
+    color: #141414; }
     .contact-wrap .btn:hover, .contact-wrap .btn:focus, .contact-wrap .btn:active {
-      color: #303133 !important; }
+      color: #141414 !important; }
       .contact-wrap .btn:hover .mask, .contact-wrap .btn:focus .mask, .contact-wrap .btn:active .mask {
         width: 0; }
 
