--- a/scss/style.scss
+++ b/scss/style.scss
@@ -37,8 +37,8 @@ Project:	Brian Tran
 @import "https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.2.18/css/lightgallery.css";
 
 $primery_font_color:#fff;
-$secondery_color:#303133;
-$background_color:#303133;
+$secondery_color:#141414;
+$background_color:#141414;
 
 
 $font: 'Poppins', sans-serif;
@@ -101,13 +101,13 @@ body {
 /* Mozilla based browsers */
 ::-moz-selection {
        background: rgba(206, 174, 145, 0.58);
-       color: #303133;
+       color: #141414;
 }
 
 /* Works in Safari */
 ::selection {
        background: rgba(206, 174, 145, 0.58);
-       color: #303133;
+       color: #141414;
 }
 
 a:hover,a:active {
@@ -319,7 +319,7 @@ p{
 	z-index: -1;
 	width: 100%;
 	height: 5px;
-	background: #303133;
+	background: #141414;
 	-webkit-transform: translate3d(-100%, 0, 0);
 	transform: translate3d(-100%, 0, 0);
 	pointer-events: none;
@@ -331,7 +331,7 @@ p{
 	right: 0;
 	width: 100px;
 	height: 100%;
-	background: #303133;
+	background: #141414;
 	content: '';
 	opacity: 0;
 	-webkit-transition: opacity 0.2s, box-shadow 2s 4s;
@@ -445,7 +445,7 @@ p{
 	-webkit-backface-visibility:hidden;
 }
 .fixed-bg-overlay {
-	background: rgba(255, 255,255,.25);
+	background: rgba(255, 255,255,0);
     height: 100%;
     width: 100%;
 	z-index:-1;
